# weakly-labeled-news-ai

./: .env-example  .gitignore  NewsTitleWeakSupervision.ipynb  README.md  create-env.sh  pyproject.toml
helpers/: dataset.py  lf.py  plot.py  text.py  train.py
