[tool.poetry]
name = "weakly-labeled-news-ai"
version = "0.1.0"
description = ""
authors = ["Frank"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
dotenv = "^0.9.9"
huggingface-hub = "^0.31.2"
scikit-learn = "^1.6.1"
scikit-optimize = "^0.10.2"
snorkel = "^0.10.0"
torch = { version = "==2.5.1", source = "pytorch-cuda" }
torchvision = { version = "==0.20.1", source = "pytorch-cuda" }
pyarrow = "^20.0.0"
fastparquet = "^2024.11.0"
plotly = "^6.1.0"
matplotlib = "^3.10.3"
nbformat = "^5.10.4"
plotly-express = "^0.4.1"
xgboost = "^3.0.1"
sentence-transformers = "^4.1.0"
seaborn = "^0.13.2"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
torch       = { version = "==2.5.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
torchvision = { version = "==0.20.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.extras]
cpu  = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
name = "pytorch-cuda"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu124"

[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
